# envector

./: .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.md  README.md  README.rst  noxfile.py  pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  requirements.txt
docs/appendix/: acknowledgement.rst
docs/how-to/: contributing.rst
docs/intro/: index.rst
docs/reference/: index.rst  nvector_summary.rst
docs/topics/: index.rst
docs/tutorials/: getting_started.rst  getting_started_functional.rst  index.rst  install.rst  whatsnext.rst
src/envector/: __init__.py  _acknowledgements.py  _documentation.py  _examples.py  _examples_object_oriented.py  _images.py  _info.py  _info_functional.py  _installation.py  _intro.py  core.py  karney.py  objects.py  plot.py  rotation.py  util.py
tests/: conftest.py  test_geodesic.py  test_nvector.py  test_nvector_with_vectors.py  test_objects.py  test_plot.py  test_rotation.py  test_util.py
