[project]
name = "envector"
dynamic = ["version"]
description = "The envector library is a suite of tools written in Python to solve geographical position calculations forked from nvector."
authors = [
    {name = "Matt Hogan", email = "mhogan@nwra.com"},
    {name = "Kenneth Gade, FFI"},
    {name = "Kristian Svartveit, FFI"},
    {name = "Brita Hafskjold Gade, FFI"},
    {name = "Per A. Brodtkorb, FFI"},
]
dependencies = [
    "numpy>=1.9",
    "scipy>=0.9",
    "geographiclib",
    "matplotlib",
    "cartopy"
]
requires-python = ">=3.5"
readme = "README.rst"
license = {text = "Simplified BSD"}
license_file = "LICENSE.txt"
url = "https://github.com/mhogan-nwra/envector/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: GIS"
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/envector/__init__.py"

[tool.pdm.scripts]
sphinx_build = "sphinx-build -b html docs docs/_build -d docs/_build/doctrees"
lock_win64 = "pdm lock -L pdm_windows.lock --python 3.12 --strategy no_direct_minimal_versions --platform windows -dG all"
lock_linux = "pdm lock -L pdm_linux.lock --python 3.12 --strategy no_direct_minimal_versions --platform linux -dG all"

[tool.pdm.dev-dependencies]
build = [
    "setuptools>=39.2",
    "spyder-kernels",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-pep8",
    "hypothesis",
]
sphinx = [
    "sphinx>=1.3.1",
    "sphinx_rtd_theme>=0.1.7",
    "numpydoc>=0.5",  # Remove in next release
    "sphinxcontrib-napoleon",
    "sphinxcontrib-bibtex"
]
all = ["envector[build,test,sphinx]"]

[tool.pytest.ini_options]
addopts = "-rsxXf --doctest-modules"
testpaths = [
    "tests",
    "src"
]
